--- a/src/components/CompanyPopup/Company/styles.scss
+++ b/src/components/CompanyPopup/Company/styles.scss
@@ -1,5 +1,5 @@
 @import '../../../styles/colors';
-@import "../../../styles/safariOnly.scss";
+@import "../../../styles/browserSpecific.scss";
 
 .Company {
   position: relative;
@@ -56,8 +56,8 @@
     font-size: 18px;
   }
 }
-@include safariOnly{
-  .Company{
+@include safariOnly {
+  .Company {
     width: 480px;
       p {
        width: 400px;
